--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ section p {
     background-color: #ffffff;
     width: 60%;
     padding: 3%;
+    margin: 5px auto;
     color: #242424;
     font-size: 20px;
     font-weight: 100;
