--- a/netology/html/lesson_4_1/style.css
+++ b/netology/html/lesson_4_1/style.css
@@ -30,15 +30,20 @@ header {
     top: 0;
     left: 0%;
     right: 0%;
-    padding: 38px 9.4%;
-    text-align: justify;
+    padding: 38px 0;
     border-bottom: solid 1px rgba(255, 255, 255, 0);
     box-shadow: 0px 1px 0px 0px rgba(255, 255, 255, 0.15);
     font-size: 0;
     background: rgba(47, 48, 76, 0.8);
 }
 
-.main-menu::after {
+.main-menu__center {
+    max-width: 1170px;
+    margin: 0 auto; 
+    text-align: justify; 
+}
+
+.main-menu__center::after {
     content: "";
     display: inline-block;
     width: 100%;
