add photo 3 in section .works

--- a/netology/html/lesson_4_1/style.css
+++ b/netology/html/lesson_4_1/style.css
@@ -227,7 +227,7 @@ header {
 }
 
 .works__item:nth-of-type(3) {
-    background-image: url(http://image.ibb.co/j3P5DH/work_5.jpg);
+    background-image: url(http://image.ibb.co/h5eZ8H/work_3.jpg);
     background-size: cover;
 }
 
