--- a/Clinic-website-template/css/style.less
+++ b/Clinic-website-template/css/style.less
@@ -234,7 +234,7 @@
         .information {
             display: flex;
             flex-wrap: wrap;
-            padding: 92px 47px 0 101px;
+            padding: 92px 47px 16px 101px;
             background-color: rgb(241, 241, 241);
             .about-company {
                 flex-basis: 50%;
@@ -262,7 +262,7 @@
                     line-height: 1;
                 }
                 .post-item {
-                    margin-bottom: 31px;
+                    min-height: 124px;
                     &__pic {
                         float: left;
                         margin-right: 20px;
