--- a/BosaNoga/css/style-product-card.css
+++ b/BosaNoga/css/style-product-card.css
@@ -1,6 +1,6 @@
 html,
 body {
-  max-width: 1438px;
+  /* max-width: 1438px; */
   min-width: 1205px;
   margin: 0 auto;
   font-family: 'Roboto', sans-serif;
@@ -27,7 +27,6 @@ a:hover {
   width: 100%;
   height: 52px;
 }
-
 
 ul.breadcrumb-container__breadcrumbs li {
   display: inline-block;
@@ -303,6 +302,11 @@ li.active {
   background: #A1B3BF;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
   border-radius: 50px;
+}
+
+.basket-item__quantity-change:hover {
+    cursor: pointer;
+    color: #333333;
 }
 
 /*Цена*/
