--- a/exelente_ru/css/header.css
+++ b/exelente_ru/css/header.css
@@ -12,6 +12,7 @@
   color: #004391;
 }
 .top-block__city {
+  position: relative;
   display: flex;
   align-items: center;
   height: 100%;
@@ -29,6 +30,7 @@
   padding-top: 3px;
   font-family: 'Bebas Neue';
   font-size: 18px;
+  font-weight: bold;
   color: #DF5E16;
 }
 .top-block__item {
@@ -42,9 +44,6 @@
 .top-block__item_favorite {
   flex: 1;
   padding-right: 17px;
-}
-.hidden-menu {
-  display: none;
 }
 .menu-block {
   display: flex;
@@ -90,6 +89,7 @@
     text-transform: uppercase;
     text-decoration: none;
     font-size: 14px;
+    font-weight: bold;
     color: #FFFFFF;
   }
   .main-menu__item a:hover ~ ul {
@@ -127,32 +127,66 @@
   .main-menu__subitem::first-letter {
     text-transform: uppercase;
   }
-  .social-media__title {
-    font-family: Bebas Neue;
-    font-size: 18px;
-    color: #004391;
-  }
 }
 .hidden-menu {
+  display: none;
   padding: 10px 0;
   background-color: #FFFFFF;
+}
+.hidden-menu__popups {
+  display: none;
+  justify-content: flex-end;
+  flex: 1;
+  font-size: 10px;
+  color: #004391;
+}
+.hidden-menu__popups i {
+  font-size: 9px;
+}
+.hidden-menu__popups i:hover {
+  cursor: pointer;
+}
+.hidden-menu__popups input {
+  width: 285px;
+  height: 15px;
+  font-size: 10px;
+  color: #004391;
+  border: none;
+  border-bottom: solid 1px #004391;
+  outline: none;
+}
+.hidden-menu__popups input::placeholder {
+  font-size: 10px;
+  color: #004391;
+  margin-left: 222px;
+}
+.hidden-menu__item {
+  margin-left: 20px;
+}
+.hidden-menu__item:first-child {
+  margin-right: 80px;
 }
 .hidden-menu_visible {
   position: fixed;
   top: 0;
   display: block;
-  z-index: 100;
+  z-index: 110;
   height: auto;
   width: 1280px;
+  animation: fade-in 1s ease;
 }
 .hidden-menu__logo {
-  padding-top: 10px;
+  padding-top: 16px;
+}
+.hidden-menu__logo img {
+  height: 49px;
 }
 .hidden-menu__menu {
   position: relative;
+  z-index: 100;
   display: flex;
   align-items: center;
-  padding: 19px 60px 13px 18px;
+  padding: 15px 60px 13px 18px;
   font-family: Bebas Neue;
   font-size: 18px;
   letter-spacing: 4px;
@@ -167,7 +201,7 @@
 }
 .hidden-menu__close {
   position: absolute;
-  top: 0;
+  top: -8px;
   right: 0;
   display: none;
   justify-content: center;
@@ -182,21 +216,22 @@
 }
 .hidden-menu + .menu-block_from-hidden {
   position: fixed;
-  top: 80px;
+  top: 0;
   z-index: 100;
   width: 1280px;
-  height: auto;
+  height: 100vh;
   background-color: #ffffff;
 }
 .hidden-menu + .menu-block_from-hidden .wrapper {
   justify-content: flex-start;
   align-items: stretch;
-  padding-top: 60px;
+  padding-top: 140px;
 }
 .hidden-menu + .menu-block_from-hidden .contacts {
   display: flex;
   flex-direction: column;
-  margin-right: 130px;
+  max-height: 450px;
+  margin-right: 128px;
 }
 .hidden-menu + .menu-block_from-hidden .contacts__text {
   font-size: 10px;
@@ -205,11 +240,38 @@
 .hidden-menu + .menu-block_from-hidden .contacts__info {
   margin-bottom: 30px;
   font-family: Bebas Neue;
+  font-weight: bold;
   font-size: 24px;
   color: #F36C21;
 }
-.hidden-menu + .menu-block_from-hidden .contacts__item_fill {
-  flex: 1;
+.hidden-menu + .menu-block_from-hidden .contacts__social-links {
+  display: flex;
+  margin-top: 8px;
+}
+.hidden-menu + .menu-block_from-hidden .contacts__social-links > a:not(:first-child) {
+  margin-left: 23px;
+}
+.hidden-menu + .menu-block_from-hidden .contacts__social-link {
+  width: 26px;
+  height: 25px;
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-image: url(../img/social-links__sprite_blue.png);
+}
+.hidden-menu + .menu-block_from-hidden .contacts__social-link_fb {
+  background-position: -50px 0;
+}
+.hidden-menu + .menu-block_from-hidden .contacts__social-link_youtube {
+  background-position: -100px 0;
+}
+.hidden-menu + .menu-block_from-hidden .contacts__social-link_vk {
+  background-position: -150px 0;
+}
+.hidden-menu + .menu-block_from-hidden .contacts__item_social-media {
+  margin-top: 170px;
+  font-family: Bebas Neue;
+  font-size: 18px;
+  color: #004391;
 }
 .hidden-menu + .menu-block_from-hidden .menu-block__logo {
   display: none;
@@ -219,6 +281,7 @@
 }
 .hidden-menu + .menu-block_from-hidden .menu-block__menu {
   margin: 0;
+  max-height: 450px;
   width: unset;
 }
 .hidden-menu + .menu-block_from-hidden .main-menu__items {
@@ -240,6 +303,7 @@
   text-transform: uppercase;
   text-decoration: none;
   font-size: 18px;
+  font-weight: bold;
   color: #004391;
 }
 .hidden-menu + .menu-block_from-hidden .main-menu__item a:hover {
@@ -255,7 +319,7 @@
 }
 .hidden-menu + .menu-block_from-hidden .main-menu__subitems a {
   font-family: 'Open Sans';
-  font-size: 10px;
+  font-size: 12px;
   color: #000000;
   text-transform: unset;
   white-space: nowrap;
@@ -278,9 +342,6 @@
   .menu-block__logo {
     margin-left: 20px;
   }
-  .menu-block__contacts {
-    display: none;
-  }
   .menu-block__menu-pic {
     display: block;
     width: 24px;
@@ -293,5 +354,13 @@
   }
   .menu-block__menu-pic:hover {
     cursor: pointer;
+  }
+}
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
