--- a/exelente_ru/css/common.css
+++ b/exelente_ru/css/common.css
@@ -3,13 +3,19 @@
   font-family: 'Bebas Neue';
   src: url('../fonts/bebas/TTF\'s/BebasNeue Regular.ttf') format("truetype");
 }
+@font-face {
+  font-family: 'Bebas Neue';
+  src: url('../fonts/bebas/TTF\'s/BebasNeue Bold.ttf') format("truetype");
+  font-weight: bold;
+}
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-
 body {
+  animation: fade-in 0.5s ease;
+  font-family: 'Open Sans', sans-serif;
   scroll-behavior: smooth;
 }
 @media (min-width: 577px) {
@@ -17,13 +23,12 @@ body {
     max-width: 1280px;
     min-width: 1180px;
     margin: 0 auto;
-    font-family: 'Open Sans', sans-serif;
+    background-color: #004391;
   }
 }
 @media (max-width: 576px) {
   body {
     width: 100%;
-    font-family: 'Open Sans', sans-serif;
     min-width: unset;
     padding: 0;
   }
@@ -40,5 +45,16 @@ body {
     width: 100%;
     margin: 0 auto;
     height: 100%;
+  }
+}
+.container {
+  background-color: #ffffff;
+}
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
