--- a/exelente_ru/css/slider.css
+++ b/exelente_ru/css/slider.css
@@ -17,6 +17,16 @@
   opacity: 0;
   transition: opacity 1s;
 }
+.slider__item::before {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  z-index: -1;
+  background-color: rgba(0, 67, 145, 0.4);
+  content: '';
+}
 .slider__item_1 {
   background-image: url(../img/slider__item_1.png);
   z-index: 1;
@@ -128,6 +138,9 @@
 @media (max-width: 576px) {
   .site-path {
     display: none;
+  }
+  .slider {
+    margin-top: 50px;
   }
   .slider__item_1 {
     background-position-x: -150px;
