--- a/exelente_ru/css/header.css
+++ b/exelente_ru/css/header.css
@@ -37,6 +37,10 @@
   margin-left: 1px;
   text-align: right;
 }
+.top-block__item:hover {
+  color: #DF5E16;
+  cursor: pointer;
+}
 .top-block__item i {
   margin-left: 5px;
   font-size: 1.5em;
@@ -57,11 +61,15 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  font-size: 18px;
 }
 .menu-block__logo i {
   margin: 0 0 8px 26px;
   font-size: 1.1em;
   color: #ffffff;
+}
+.menu-block__logo i:hover {
+  cursor: pointer;
 }
 @media (min-width: 577px) {
   .menu-block__menu-pic {
@@ -100,7 +108,7 @@
     display: none;
     top: 36px;
     left: -17px;
-    z-index: 2;
+    z-index: 5;
     padding: 12px 70px 30px 17px;
     background: #FFFFFF;
     border: 1px solid #004391;
@@ -112,7 +120,8 @@
   }
   .main-menu__subitems a {
     font-family: 'Open Sans';
-    font-size: 10px;
+    font-size: 12px;
+    font-weight: normal;
     color: #000000;
     text-transform: unset;
     white-space: nowrap;
@@ -172,8 +181,17 @@
   display: block;
   z-index: 110;
   height: auto;
-  width: 1280px;
   animation: fade-in 1s ease;
+}
+@media (min-width: 1281px) {
+  .hidden-menu_visible {
+    min-width: 1280px;
+  }
+}
+@media (max-width: 1280px) {
+  .hidden-menu_visible {
+    width: 1280px;
+  }
 }
 .hidden-menu__logo {
   padding-top: 16px;
@@ -258,6 +276,9 @@
   background-position: 0 0;
   background-image: url(../img/social-links__sprite_blue.png);
 }
+.hidden-menu + .menu-block_from-hidden .contacts__social-link:hover {
+  transform: scale(1.2);
+}
 .hidden-menu + .menu-block_from-hidden .contacts__social-link_fb {
   background-position: -50px 0;
 }
@@ -320,6 +341,7 @@
 .hidden-menu + .menu-block_from-hidden .main-menu__subitems a {
   font-family: 'Open Sans';
   font-size: 12px;
+  font-weight: normal;
   color: #000000;
   text-transform: unset;
   white-space: nowrap;
@@ -339,6 +361,13 @@
   .main-menu__items {
     display: none;
   }
+  .menu-block {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 10;
+  }
   .menu-block__logo {
     margin-left: 20px;
   }
@@ -354,6 +383,12 @@
   }
   .menu-block__menu-pic:hover {
     cursor: pointer;
+  }
+  .menu-block__contacts {
+    display: none;
+  }
+  .hidden-menu {
+    top: -100%;
   }
 }
 @keyframes fade-in {
